--- a/app/requirements/Dockerfile.optional_requirements
+++ b/app/requirements/Dockerfile.optional_requirements
@@ -3,4 +3,5 @@ FROM python:3.11-slim
 
 # Install Requirements
 COPY optional-requirements.txt optional-requirements.txt
+RUN pip install --upgrade pip --break-system-packages
 RUN pip install --disable-pip-version-check --no-cache-dir --prefer-binary --target /pip-packages -r optional-requirements.txt
